test/1.4/errors/T_ESYNTAX_old_log_type.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device x;

method init() {
    /// ERROR ESYNTAX
    log "info": "";
}
